# Notion-Google-Workspace-Sync

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
app/: config.py  logging.py  main.py  runtime.py
app/api/webhooks/: notion.py
app/connectors/: relay.py
app/connectors/google/: _retry.py  auth.py  docs.py  drive.py  health.py  sheets.py  tasks.py
app/connectors/notion/: client.py  read.py  write.py
app/core/: canonical.py  conflict.py  echo.py  hashing.py  markdown.py  tombstone.py
app/engines/: command_schema.py  commands.py  docs_gen.py  google_mirror.py  mirror_in.py  mirror_out.py  notion_source.py  resolve.py
app/ledger/: db.py  models.py  repo.py
app/scheduler/: jobs.py  scheduler.py
docs/: HOW_IT_WORKS.md  PLAN.md  SAVED_INFO.md
scripts/: bootstrap.py
standalone-bootstrap/: README.md  bootstrap_standalone.py  requirements.txt
tests/: conftest.py  fakes.py  test_client.py  test_command_schema.py  test_commands.py  test_conflict.py  test_docs_gen.py  test_echo.py  test_google_mirror_cache.py  test_google_retry.py  test_hashing.py  test_jobs.py  test_markdown.py  test_mirror_in.py  test_mirror_out.py  test_notion_props.py  test_read_render.py  test_relay.py  test_repo.py  test_sheets_mapping.py  test_tasks.py  test_webhook.py
